--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -58,7 +58,7 @@
   </main>
 
   <footer>
-    <p>Copyright &copy; 2024 TechCon Conference. All rights reserved.</p>
+    <p>copyright 2024 TechCon Conference. All rights reserved.</p>
   </footer>
 </body>
 </html>
